[gd_scene load_steps=18 format=2]

[ext_resource path="res://Source/Fonts/azonix-font/Azonix-1VB0.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Source/Images/recovery-mode.png" type="Texture" id=2]
[ext_resource path="res://Source/Scripts/ModeSelection.gd" type="Script" id=3]
[ext_resource path="res://Source/Images/corrupt-mode.png" type="Texture" id=4]
[ext_resource path="res://Source/Animations/ScenesRecoveryModeMouseOver.tres" type="Animation" id=5]
[ext_resource path="res://Source/Sounds-Audio/166186__drminky__menu-screen-mouse-over.wav" type="AudioStream" id=6]
[ext_resource path="res://Source/Images/KeyboardSelectionMode.png" type="Texture" id=7]

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.617486, 0.956284, 1 )
colors = PoolColorArray( 0.0898438, 0.0898438, 0.0898438, 1, 0.32737, 0.276518, 0.276518, 0.842602, 0.457694, 0.378941, 0.378941, 0.756241, 0.47451, 0.392157, 0.392157, 0.392157 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 12 )

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "AnimationReset"
tracks/0/type = "bezier"
tracks/0/path = NodePath("RecoveryMode/ColorRect/TextureRect:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("RecoveryMode/ColorRect/TextureRect:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("RecoveryMode/ColorRect/TextureRect:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("RecoveryMode/ColorRect/TextureRect:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.431373, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CorruptMode/ColorRect2/TextureRect2:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("CorruptMode/ColorRect2/TextureRect2:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("CorruptMode/ColorRect2/TextureRect2:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("CorruptMode/ColorRect2/TextureRect2:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0.431373, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "CorruptModeMouseOver"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("CorruptMode/ColorRect2/TextureRect2:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CorruptMode/ColorRect2/TextureRect2:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CorruptMode/ColorRect2/TextureRect2:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CorruptMode/ColorRect2/TextureRect2:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.431373, -0.25, 0, 0.25, 0, 0.862745, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("RecoveryMode/ColorRect/TextureRect:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("RecoveryMode/ColorRect/TextureRect:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("RecoveryMode/ColorRect/TextureRect:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("RecoveryMode/ColorRect/TextureRect:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.862745, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("RecoveryMode/ColorRect:rect_scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("RecoveryMode/ColorRect:rect_scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("CorruptMode/ColorRect2/TextureRect2:modulate:r")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("CorruptMode/ColorRect2/TextureRect2:modulate:g")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("CorruptMode/ColorRect2/TextureRect2:modulate:b")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("CorruptMode/ColorRect2/TextureRect2:modulate:a")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0.862745, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=7]
resource_name = "FadeInModeSelection"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="DynamicFont" id=9]
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 11 )
expand = true

[node name="RecoveryMode" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -142.0
margin_right = -11.0
margin_bottom = -102.0

[node name="ColorRect" type="ColorRect" parent="RecoveryMode"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 60.0
margin_top = 10.0
margin_right = 296.0
margin_bottom = 275.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="RecoveryMode/ColorRect"]
modulate = Color( 1, 1, 1, 0.862745 )
margin_top = 4.0
margin_right = 236.0
margin_bottom = 265.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="RecoveryMode/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -79.0
margin_top = 8.0
margin_right = 79.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "RECOVERY MODE"
align = 1
valign = 1

[node name="RecoveryMouseDetection" type="Control" parent="RecoveryMode/ColorRect"]
margin_left = 3.0
margin_top = 1.0
margin_right = 239.0
margin_bottom = 272.0

[node name="CorruptMode" type="Control" parent="."]
margin_left = 152.0
margin_right = 192.0
margin_bottom = 40.0

[node name="ColorRect2" type="ColorRect" parent="CorruptMode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 61.0
margin_top = 147.5
margin_right = 297.0
margin_bottom = 412.5
color = Color( 0, 0, 0, 1 )

[node name="TextureRect2" type="TextureRect" parent="CorruptMode/ColorRect2"]
modulate = Color( 1, 1, 1, 0.862745 )
margin_top = 2.0
margin_right = 236.0
margin_bottom = 266.0
texture = ExtResource( 4 )
expand = true

[node name="Label2" type="Label" parent="CorruptMode/ColorRect2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.0
margin_top = 7.0
margin_right = 86.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "CORRUPTED MODE"
align = 1
valign = 1

[node name="CorruptModeMouseOver" type="Control" parent="CorruptMode/ColorRect2"]
margin_top = 2.0
margin_right = 236.0
margin_bottom = 268.0

[node name="WormMode" type="Control" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.235294 )
margin_right = 45.0
margin_bottom = 43.0

[node name="ColorRect3" type="ColorRect" parent="WormMode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 676.0
margin_top = 148.5
margin_right = 912.0
margin_bottom = 413.5
color = Color( 0, 0, 0, 1 )

[node name="Label3" type="Label" parent="WormMode/ColorRect3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -79.0
margin_top = 6.0
margin_right = 79.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "WORM MODE"
align = 1
valign = 1

[node name="WormModeMouseOver" type="Control" parent="WormMode/ColorRect3"]
margin_top = 37.5
margin_right = 236.0
margin_bottom = 265.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AnimationReset = SubResource( 4 )
anims/CorruptModeMouseOver = SubResource( 5 )
anims/RESET = SubResource( 2 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/ScenesRecoveryModeMouseOver = ExtResource( 5 )

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]

[node name="ModeDescriptionLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -239.5
margin_top = -138.0
margin_right = 239.5
margin_bottom = -15.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
autowrap = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 2.0

[node name="KeyboardSelection" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="KeyboardSelection"]
margin_left = 77.0
margin_top = 165.0
margin_right = 321.0
margin_bottom = 437.0
texture = ExtResource( 7 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="FadeInAnimation" type="AnimationPlayer" parent="."]
anims/FadeInModeSelection = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="BackToMainMenu" type="Button" parent="."]
margin_left = 28.0
margin_top = 12.0
margin_right = 156.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 9 )
text = "Main Menu"

[connection signal="mouse_entered" from="RecoveryMode/ColorRect/RecoveryMouseDetection" to="." method="_on_RecoveryMouseDetection_mouse_entered"]
[connection signal="mouse_exited" from="RecoveryMode/ColorRect/RecoveryMouseDetection" to="." method="_on_RecoveryMouseDetection_mouse_exited"]
[connection signal="mouse_entered" from="CorruptMode/ColorRect2/CorruptModeMouseOver" to="." method="_on_CorruptModeMouseOver_mouse_entered"]
[connection signal="mouse_exited" from="CorruptMode/ColorRect2/CorruptModeMouseOver" to="." method="_on_CorruptModeMouseOver_mouse_exited"]
[connection signal="mouse_entered" from="WormMode/ColorRect3/WormModeMouseOver" to="." method="_on_WormModeMouseOver_mouse_entered"]
[connection signal="mouse_exited" from="WormMode/ColorRect3/WormModeMouseOver" to="." method="_on_WormModeMouseOver_mouse_exited"]
[connection signal="pressed" from="BackToMainMenu" to="." method="_on_BackToMainMenu_pressed"]
